AC_INIT([seastack], [0.1], [raywill@xuehuar.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AM_PROG_AR
AC_PROG_LIBTOOL
AC_PROG_CXX
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
                 Makefile
                 src/Makefile
                 src/cutil/Makefile
                 tests/Makefile
                 tests/cutil/Makefile
                 ])
AC_OUTPUT
